# rsh

./: .gitignore  Makefile  README.md  builtin.c  builtin.h  catcher  catcher.c  external.c  external.h  history.c  history.h  interpret.c  interpret.h  ls.c  ls.h  main.c  main.h  makefile  meson.build  nightswatch.c  nightswatch.h  out  out.txt  parse.c  parse.h  pinfo.c  pinfo.h  prompt.c  prompt.h  readme.md  rsh
include/: builtin.h  cronjob.h  env.h  external.h  history.h  interpret.h  kill.h  ls.h  main.h  nightswatch.h  parse.h  pinfo.h  prompt.h  util.h
src/: builtin.c  cronjob.c  env.c  external.c  history.c  interpret.c  kill.c  ls.c  main.c  nightswatch.c  parse.c  pinfo.c  prompt.c  util.c
